some minor typographical fixup

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,5 @@
 ---
+feed-icon-28x28.png: feed-icon-28x28-5bbe41a4fd366ba852c7ae9700873001.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 application.js: application-33bcb46c9785116c86b0d7d9a7c9c7a4.js
 application.css: application-60fafdbe3644e8cd181e434d20f51fff.css
